--- a/Dekkeni/StoreTableViewCell.xib
+++ b/Dekkeni/StoreTableViewCell.xib
@@ -36,6 +36,17 @@
                         </attributedString>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OoH-qt-nAS">
+                        <rect key="frame" x="20" y="319.5" width="37" height="14"/>
+                        <attributedString key="attributedText">
+                            <fragment content="Label">
+                                <attributes>
+                                    <font key="NSFont" size="15" name="ArialMT"/>
+                                </attributes>
+                            </fragment>
+                        </attributedString>
+                        <nil key="highlightedColor"/>
+                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1dR-jk-bjm">
                         <rect key="frame" x="228" y="315.5" width="50" height="21.5"/>
                         <attributedString key="attributedText">
@@ -48,6 +59,18 @@
                         </attributedString>
                         <nil key="highlightedColor"/>
                     </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rDr-RQ-8qd">
+                        <rect key="frame" x="30" y="430" width="238" height="2"/>
+                        <color key="backgroundColor" red="0.75686274509999996" green="0.25882352939999997" blue="0.15686274510000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="2" id="LwQ-cZ-fZO"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="2"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="aln-Sf-Cbk">
                         <rect key="frame" x="20" y="338.5" width="258" height="65.5"/>
                         <subviews>
@@ -110,43 +133,30 @@
                             </button>
                         </subviews>
                     </stackView>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rDr-RQ-8qd">
-                        <rect key="frame" x="30" y="430" width="238" height="2"/>
-                        <color key="backgroundColor" red="0.75686274509999996" green="0.25882352939999997" blue="0.15686274510000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="2" id="LwQ-cZ-fZO"/>
-                        </constraints>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                <real key="value" value="2"/>
-                            </userDefinedRuntimeAttribute>
-                        </userDefinedRuntimeAttributes>
-                    </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OoH-qt-nAS">
-                        <rect key="frame" x="20" y="319.5" width="37" height="14"/>
-                        <attributedString key="attributedText">
-                            <fragment content="Label">
-                                <attributes>
-                                    <font key="NSFont" size="15" name="ArialMT"/>
-                                </attributes>
-                            </fragment>
-                        </attributedString>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4xf-pc-KxV">
+                        <rect key="frame" x="20" y="47" width="258" height="234"/>
+                        <connections>
+                            <action selector="imagePressed:" destination="N1v-dz-pc0" eventType="touchUpInside" id="15g-HX-MNu"/>
+                        </connections>
+                    </button>
                 </subviews>
             </view>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="OoH-qt-nAS" firstAttribute="top" secondItem="9Jh-9i-xx5" secondAttribute="bottom" constant="5" id="6A7-TW-tIv"/>
                 <constraint firstItem="rDr-RQ-8qd" firstAttribute="centerX" secondItem="K0Z-PU-avm" secondAttribute="centerX" id="7ct-8t-Rx6"/>
+                <constraint firstItem="4xf-pc-KxV" firstAttribute="width" secondItem="VRb-5x-2be" secondAttribute="width" id="D1l-ec-rsi"/>
+                <constraint firstItem="4xf-pc-KxV" firstAttribute="centerX" secondItem="VRb-5x-2be" secondAttribute="centerX" id="GCL-Yh-4g6"/>
                 <constraint firstItem="9Jh-9i-xx5" firstAttribute="width" secondItem="VRb-5x-2be" secondAttribute="width" id="JG7-4y-GkK"/>
                 <constraint firstItem="rDr-RQ-8qd" firstAttribute="width" secondItem="N1v-dz-pc0" secondAttribute="width" multiplier="0.8" id="NTu-iO-5TM"/>
                 <constraint firstItem="9Jh-9i-xx5" firstAttribute="top" secondItem="VRb-5x-2be" secondAttribute="bottom" constant="10" id="QKk-mY-6pX"/>
                 <constraint firstItem="aln-Sf-Cbk" firstAttribute="bottom" secondItem="K0Z-PU-avm" secondAttribute="bottom" constant="-30" id="RWF-11-jnh"/>
                 <constraint firstItem="OoH-qt-nAS" firstAttribute="centerY" secondItem="1dR-jk-bjm" secondAttribute="centerY" id="Xr5-Gh-VQu"/>
+                <constraint firstItem="4xf-pc-KxV" firstAttribute="centerY" secondItem="VRb-5x-2be" secondAttribute="centerY" id="ZzQ-O8-aPV"/>
                 <constraint firstItem="aln-Sf-Cbk" firstAttribute="height" secondItem="N1v-dz-pc0" secondAttribute="height" multiplier="0.14" id="etk-uU-7Wg"/>
                 <constraint firstItem="OoH-qt-nAS" firstAttribute="leading" secondItem="VRb-5x-2be" secondAttribute="leading" id="gxV-zR-3Rq"/>
                 <constraint firstItem="VRb-5x-2be" firstAttribute="leading" secondItem="K0Z-PU-avm" secondAttribute="leading" constant="20" id="hta-xo-ZeX"/>
+                <constraint firstItem="4xf-pc-KxV" firstAttribute="height" secondItem="VRb-5x-2be" secondAttribute="height" id="j0d-Dp-SkJ"/>
                 <constraint firstItem="K0Z-PU-avm" firstAttribute="trailing" secondItem="VRb-5x-2be" secondAttribute="trailing" constant="20" id="jue-GQ-Rhg"/>
                 <constraint firstItem="9Jh-9i-xx5" firstAttribute="centerX" secondItem="VRb-5x-2be" secondAttribute="centerX" id="mfp-hd-eE5"/>
                 <constraint firstItem="VRb-5x-2be" firstAttribute="height" secondItem="N1v-dz-pc0" secondAttribute="height" multiplier="0.5" id="nIT-qt-WAD"/>
@@ -162,6 +172,7 @@
             <size key="customSize" width="298" height="468"/>
             <connections>
                 <outlet property="descriptionLabel" destination="OoH-qt-nAS" id="Oa8-kL-dbd"/>
+                <outlet property="imageButton" destination="4xf-pc-KxV" id="pJc-GP-qYZ"/>
                 <outlet property="priceLabel" destination="1dR-jk-bjm" id="COj-xT-Gsv"/>
                 <outlet property="productImageView" destination="VRb-5x-2be" id="eeM-ZX-hPO"/>
                 <outlet property="quantityLabel" destination="p7q-EM-YmI" id="qIy-fR-YoV"/>
